# internal/connector/internal/api/private/api/openapi.yaml
@@ -531,6 +531,8 @@ components:
           $ref: '#/components/schemas/ServiceAccount'
         kafka:
           $ref: '#/components/schemas/KafkaConnectionSettings'
+        knative:
+          $ref: '#/components/schemas/KnativeConnectionSettings'
         schema_registry:
           $ref: '#/components/schemas/SchemaRegistryConnectionSettings'
         connector_id:
@@ -790,6 +792,21 @@ components:
       required:
       - id
       - url
+    KnativeConnectionSettings:
+      description: Holds the configuration to connect to a Knative service.
+      properties:
+        kind:
+          enum:
+          - channel
+          - endpoint
+          - broker
+          type: string
+        name:
+          type: string
+      required:
+      - kind
+      - name
+      type: object
     SchemaRegistryConnectionSettings:
       allOf:
       - $ref: '#/components/schemas/ServiceConnectionSettings'
